# pinocchio-project

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml
clients/js/: .eslintrc.cjs  .gitignore  package.json  pnpm-lock.yaml  typedoc.json
clients/rust/: Cargo.toml
integration_tests/: Cargo.toml
integration_tests/tests/: test_initialize.rs
integration_tests/tests/helpers/: mod.rs
scripts/: generate-clients.mjs
