[workspace]

members = [
  "program",
  "integration_tests",
  "clients/rust",
]

resolver = "2"

package.version = "0.1.0"
package.edition = "2021"

[workspace.dependencies]
borsh = "1.5.5"
litesvm = "0.8.1"
pinocchio = "0.9.2"
pinocchio-log = "0.5.1"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
shank = "0.4.5"
myproject-client = { path = "clients/rust" }
solana-program = "3.0.0"
solana-transaction = "3.0.1"
solana-keypair = "3.0.1"
solana-signer = "3.0.0"
solana-cpi = "3.0.0"
solana-account-info = "3.0.0"
solana-instruction = "3.0.0"
solana-program-error = "3.0.0"
solana-pubkey = { version = "3.0.0" , features = ["borsh"] }
thiserror = "2.0.11"