[package]
name = "myproject-tests"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
borsh = { workspace = true }
litesvm = { workspace = true }
myproject-client = { workspace = true }
solana-transaction = { workspace = true }
solana-keypair = { workspace = true }
solana-signer = { workspace = true }

[dev-dependencies]
test-log = "0.2.17"
