[package]
name = "myproject-client"
description = "Generated client for myproject"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
borsh = {workspace = true }
solana-account-info = {workspace = true }
solana-cpi = {workspace = true }
solana-instruction = {workspace = true }
solana-program-error = {workspace = true }
solana-pubkey = {workspace = true }
